--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<DOCTYPE HTML>
-<html lang="en">
-    <head>
-        <title> Cool site </title>
-        <stuff> Hello there </stuff>
-    </head>
-</DOCTYPE>
+Hello World!
