--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bird Watching</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <div class="header-top">
+      <h1>Birdwatching</h1>
+      <img src="logo.png" alt="Bird Watching Logo" />
+    </div>
+    <nav class="navigation">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Get Started</a></li>
+        <li><a href="#">Photos</a></li>
+        <li><a href="#">Gear</a></li>
+        <li><a href="#">Forum</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="welcome">
+      <h2>Welcome</h2>
+      <p>A bunch of boring stuff</p>
+      <p>Birdwatching is Great</p>
+    </section>
+
+    <section class="photos">
+      <h2>Favorite Photos</h2>
+      <img src="Photo1.jfif" alt="Bird Photo 1" />
+      <img src="photo2.jpg" alt="Bird Photo 2" />
+    </section>
+  </main>
+
+  <footer>
+    <p>This is a fake site</p>
+    <p>Made by me</p>
+  </footer>
+</body>
+</html>
