--- a/index1.html
+++ b/index1.html
@@ -11,6 +11,8 @@
       --them: #e0e0e0;
       --header: #2f3542;
       --primary: #2ed573;
+      --online-bg: #ffffff;
+      --dot: #2ed573;
     }
 
     body {
@@ -32,12 +34,32 @@
     }
 
     .online-users {
-      background: #dedede;
-      color: #222;
-      padding: 0.3rem 1rem;
-      font-size: 0.85rem;
+      background: var(--online-bg);
+      border-bottom: 1px solid #ccc;
+      padding: 0.5rem 1rem;
+      font-size: 0.9rem;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
       overflow-x: auto;
       white-space: nowrap;
+    }
+
+    .user-pill {
+      background: #eee;
+      border-radius: 999px;
+      padding: 0.3rem 0.8rem;
+      display: flex;
+      align-items: center;
+      gap: 0.4rem;
+      font-size: 0.85rem;
+    }
+
+    .user-dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: var(--dot);
     }
 
     .chat {
@@ -84,11 +106,6 @@
       display: flex;
       align-items: center;
       height: 1.5rem;
-    }
-
-    .dots {
-      display: inline-block;
-      margin-left: 0.4rem;
     }
 
     .dots span {
@@ -161,38 +178,58 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     }
 
-    .overlay-box input {
+    .overlay-box input,
+    .overlay-box select,
+    .overlay-box button {
       width: 100%;
       padding: 0.7rem;
       margin-top: 1rem;
       font-size: 1rem;
     }
 
-    .overlay-box button {
+    .room-list {
+      max-height: 200px;
+      overflow-y: auto;
       margin-top: 1rem;
-      padding: 0.7rem 1.2rem;
-      font-size: 1rem;
-      background: var(--primary);
-      color: white;
+      text-align: left;
+    }
+
+    .room-list button {
+      background: #eee;
       border: none;
-      border-radius: 5px;
+      text-align: left;
+      padding: 0.5rem 1rem;
+      width: 100%;
+      margin: 0.2rem 0;
       cursor: pointer;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
-
   <div class="overlay" id="overlay">
     <div class="overlay-box">
       <h2>Enter Your Username</h2>
       <input type="text" id="name-input" placeholder="Username" required />
-      <button onclick="setUsername()">Join Chat</button>
+      <button onclick="setUsername()">Continue</button>
+    </div>
+  </div>
+
+  <div class="overlay" id="room-overlay" style="display:none">
+    <div class="overlay-box">
+      <h2>Select a Room</h2>
+      <div id="room-list" class="room-list"></div>
+      <hr />
+      <input type="text" id="room-name-input" placeholder="New room name...">
+      <input type="password" id="room-password-input" placeholder="Password (optional)">
+      <button onclick="createRoom()">Create Room</button>
     </div>
   </div>
 
   <header>
-    <h1>Class Chat Room</h1>
+    <h1>Chat Room</h1>
   </header>
+
   <div class="online-users" id="online-users">Online: Loading...</div>
   <div class="chat" id="chat"></div>
   <div class="typing" id="typing"></div>
@@ -201,6 +238,8 @@
     <input id="msg" placeholder="Type your message..." required />
     <button type="submit" class="send">Send</button>
   </form>
+
+  <audio id="notif-sound" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg" preload="auto"></audio>
 
   <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database-compat.js"></script>
@@ -211,7 +250,7 @@
       authDomain: "chat-room-fd619.firebaseapp.com",
       databaseURL: "https://chat-room-fd619-default-rtdb.firebaseio.com",
       projectId: "chat-room-fd619",
-      storageBucket: "chat-room-fd619.firebasestorage.app",
+      storageBucket: "chat-room-fd619.appspot.com",
       messagingSenderId: "193712381688",
       appId: "1:193712381688:web:b8c185148cd09a80f9250d",
     };
@@ -223,95 +262,131 @@
     const form = document.getElementById('chat-form');
     const input = document.getElementById('msg');
     const overlay = document.getElementById('overlay');
+    const roomOverlay = document.getElementById('room-overlay');
     const nameInput = document.getElementById('name-input');
     const typingDiv = document.getElementById('typing');
     const onlineUsersDiv = document.getElementById('online-users');
+    const notifSound = document.getElementById('notif-sound');
+    const roomNameInput = document.getElementById('room-name-input');
+    const roomPasswordInput = document.getElementById('room-password-input');
+    const roomList = document.getElementById('room-list');
 
     let currentUsername = "";
+    let currentRoom = "";
     let typingTimeout;
-
-    // Load username from localStorage
-    if (localStorage.getItem("username")) {
-      currentUsername = localStorage.getItem("username");
-      overlay.style.display = "none";
-      setPresence();
-    }
 
     function setUsername() {
       const name = nameInput.value.trim();
-      if (name) {
-        currentUsername = name;
-        localStorage.setItem("username", name);
-        overlay.style.display = "none";
-        setPresence();
+      if (!name) return;
+      currentUsername = name;
+      localStorage.setItem("username", name);
+      overlay.style.display = "none";
+      roomOverlay.style.display = "flex";
+      loadRoomList();
+    }
+
+    function loadRoomList() {
+      db.ref("rooms").once("value", snapshot => {
+        const data = snapshot.val() || {};
+        roomList.innerHTML = Object.keys(data).map(room => {
+          return `<button onclick="promptJoin('${room}', ${!!data[room].password})">${room}</button>`;
+        }).join('');
+      });
+    }
+
+    function promptJoin(room, requiresPassword) {
+      let password = "";
+      if (requiresPassword) {
+        password = prompt("Enter password for room: " + room);
+        if (password === null) return;
       }
+      joinRoom(room, password);
+    }
+
+    function createRoom() {
+      const room = roomNameInput.value.trim();
+      const password = roomPasswordInput.value.trim();
+      if (!room) return alert("Room name is required");
+      db.ref(`rooms/${room}`).once("value", snap => {
+        if (snap.exists()) return alert("Room already exists");
+        if (password) db.ref(`rooms/${room}`).set({ password });
+        joinRoom(room, password);
+      });
+    }
+
+    function joinRoom(room, password) {
+      db.ref(`rooms/${room}/password`).once("value", snap => {
+        const savedPass = snap.val();
+        if (savedPass && savedPass !== password) return alert("Incorrect password");
+        currentRoom = room;
+        roomOverlay.style.display = "none";
+        setPresence();
+        loadMessages();
+      });
     }
 
     function setPresence() {
-      const userRef = db.ref("presence/" + currentUsername);
+      const userRef = db.ref(`presence/${currentRoom}/${currentUsername}`);
       userRef.set(true);
       userRef.onDisconnect().remove();
     }
 
-    form.addEventListener('submit', (e) => {
+    function loadMessages() {
+      chat.innerHTML = "";
+      db.ref(`messages/${currentRoom}`).off();
+      db.ref(`messages/${currentRoom}`).on("child_added", snapshot => {
+        const { username, text, timestamp } = snapshot.val();
+        const msg = document.createElement('div');
+        msg.className = 'message';
+        msg.classList.add(username === currentUsername ? 'me' : 'them');
+        const meta = document.createElement('div');
+        meta.className = 'meta';
+        meta.textContent = `${username} • ${new Date(timestamp).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })}`;
+        const body = document.createElement('div');
+        body.textContent = text;
+        msg.appendChild(meta);
+        msg.appendChild(body);
+        chat.appendChild(msg);
+        chat.scrollTop = chat.scrollHeight;
+        if (username !== currentUsername) {
+          notifSound.currentTime = 0;
+          notifSound.play().catch(() => {});
+        }
+      });
+
+      db.ref(`typing/${currentRoom}`).on("value", snapshot => {
+        const data = snapshot.val();
+        const typingUsers = [];
+        for (let user in data) {
+          if (user !== currentUsername) typingUsers.push(user);
+        }
+        typingDiv.innerHTML = typingUsers.length ? `${typingUsers.join(", ")} is typing <div class="dots"><span></span><span></span><span></span></div>` : "";
+      });
+
+      db.ref(`presence/${currentRoom}`).on("value", snapshot => {
+        const data = snapshot.val();
+        const names = data ? Object.keys(data) : [];
+        onlineUsersDiv.innerHTML = names.map(name => `<div class="user-pill"><span class="user-dot"></span>${name}</div>`).join("");
+      });
+    }
+
+    form.addEventListener("submit", e => {
       e.preventDefault();
       const text = input.value.trim();
-      if (text && currentUsername) {
-        const timestamp = Date.now();
-        db.ref('messages').push({ username: currentUsername, text, timestamp });
-        db.ref("typing/" + currentUsername).remove();
-        input.value = '';
+      if (text && currentRoom) {
+        db.ref(`messages/${currentRoom}`).push({ username: currentUsername, text, timestamp: Date.now() });
+        db.ref(`typing/${currentRoom}/${currentUsername}`).remove();
+        input.value = "";
       }
     });
 
     input.addEventListener("input", () => {
-      db.ref("typing/" + currentUsername).set(true);
+      if (!currentRoom) return;
+      db.ref(`typing/${currentRoom}/${currentUsername}`).set(true);
       clearTimeout(typingTimeout);
       typingTimeout = setTimeout(() => {
-        db.ref("typing/" + currentUsername).remove();
+        db.ref(`typing/${currentRoom}/${currentUsername}`).remove();
       }, 2000);
-    });
-
-    db.ref('messages').on('child_added', (snapshot) => {
-      const { username, text, timestamp } = snapshot.val();
-      const msg = document.createElement('div');
-      msg.className = 'message';
-      msg.classList.add(username === currentUsername ? 'me' : 'them');
-
-      const meta = document.createElement('div');
-      meta.className = 'meta';
-      meta.textContent = `${username} • ${new Date(timestamp).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })}`;
-
-      const body = document.createElement('div');
-      body.textContent = text;
-
-      msg.appendChild(meta);
-      msg.appendChild(body);
-      chat.appendChild(msg);
-      chat.scrollTop = chat.scrollHeight;
-    });
-
-    db.ref("typing").on("value", (snapshot) => {
-      const data = snapshot.val();
-      let typingUsers = [];
-
-      for (let user in data) {
-        if (user !== currentUsername) {
-          typingUsers.push(user);
-        }
-      }
-
-      if (typingUsers.length) {
-        typingDiv.innerHTML = `${typingUsers.join(", ")} is typing <div class="dots"><span></span><span></span><span></span></div>`;
-      } else {
-        typingDiv.innerHTML = "";
-      }
-    });
-
-    db.ref("presence").on("value", (snapshot) => {
-      const data = snapshot.val();
-      const names = data ? Object.keys(data) : [];
-      onlineUsersDiv.textContent = "Online: " + (names.length ? names.join(", ") : "No one");
     });
   </script>
 </body>
