--- a/index.html
+++ b/index.html
@@ -5,217 +5,237 @@
   <title>Chat Room</title>
   <style>
     :root {
-      --bg: #f7f9fb;
-      --text: #1e272e;
-      --me: #d3f4cb;
-      --them: #e5e5ea;
-      --header: #1e272e;
-      --primary: #2ed573;
-      --online-bg: #ffffff;
-      --dot: #2ed573;
-    }
+  --bg: #f7f9fb;
+  --text: #1e272e;
+  --me: #d3f4cb;
+  --them: #e5e5ea;
+  --header: #1e272e;
+  --primary: #2ed573;
+  --online-bg: #ffffff;
+  --dot: #2ed573;
+}
 
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
+body {
+  font-family: 'Segoe UI', sans-serif;
+  background: var(--bg);
+  color: var(--text);
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
 
-    header {
-      padding: 1rem 2rem;
-      background: var(--header);
-      color: white;
-      text-align: left;
-      font-size: 1.3rem;
-      font-weight: 600;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
+header {
+  padding: 1rem 2rem;
+  background: var(--header);
+  color: white;
+  text-align: left;
+  font-size: 1.3rem;
+  font-weight: 600;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
 
-    .online-users {
-      background: var(--online-bg);
-      border-bottom: 1px solid #ccc;
-      padding: 0.5rem 1rem;
-      font-size: 0.9rem;
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      overflow-x: auto;
-      white-space: nowrap;
-    }
+.online-users {
+  background: var(--online-bg);
+  border-bottom: 1px solid #ccc;
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  overflow-x: auto;
+  white-space: nowrap;
+}
 
-    .user-pill {
-      background: #e9ecef;
-      border-radius: 999px;
-      padding: 0.3rem 0.9rem;
-      display: flex;
-      align-items: center;
-      gap: 0.4rem;
-      font-size: 0.85rem;
-    }
+.user-pill {
+  background: #e9ecef;
+  border-radius: 999px;
+  padding: 0.3rem 0.9rem;
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  font-size: 0.85rem;
+}
 
-    .user-dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: var(--dot);
-    }
+.user-dot {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: var(--dot);
+}
 
-    .chat {
-      flex: 1;
-      padding: 1rem 1.5rem;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-    }
+.chat {
+  flex: 1;
+  padding: 1rem 1.5rem;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
 
-    .message {
-      max-width: 70%;
-      margin-bottom: 0.8rem;
-      padding: 0.6rem 1rem;
-      border-radius: 1rem;
-      font-size: 0.92rem;
-      display: flex;
-      flex-direction: column;
-      white-space: pre-wrap;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
-    }
+.message {
+  max-width: 70%;
+  margin-bottom: 0.8rem;
+  padding: 0.6rem 1rem;
+  border-radius: 1rem;
+  font-size: 0.92rem;
+  display: flex;
+  flex-direction: column;
+  white-space: pre-wrap;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+}
 
-    .me {
-      align-self: flex-end;
-      background: var(--me);
-      text-align: right;
-    }
+.me {
+  align-self: flex-end;
+  background: var(--me);
+  text-align: right;
+}
 
-    .them {
-      align-self: flex-start;
-      background: var(--them);
-    }
+.them {
+  align-self: flex-start;
+  background: var(--them);
+}
 
-    .meta {
-      font-size: 0.7rem;
-      opacity: 0.6;
-      margin-bottom: 2px;
-    }
+.meta {
+  font-size: 0.7rem;
+  opacity: 0.6;
+  margin-bottom: 2px;
+}
 
-    .typing {
-      font-size: 0.85rem;
-      font-style: italic;
-      opacity: 0.75;
-      padding: 0.2rem 1.5rem;
-      display: flex;
-      align-items: center;
-      height: 1.5rem;
-    }
+.typing {
+  font-size: 0.85rem;
+  font-style: italic;
+  opacity: 0.75;
+  padding: 0.2rem 1.5rem;
+  display: flex;
+  align-items: center;
+  height: 1.5rem;
+}
 
-    .dots span {
-      display: inline-block;
-      width: 6px;
-      height: 6px;
-      margin: 0 2px;
-      background: var(--text);
-      border-radius: 50%;
-      animation: blink 1.4s infinite both;
-    }
+.dots {
+  display: inline-block;
+  margin-left: 0.4rem;
+}
+.dots span {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  margin: 0 2px;
+  background: var(--text);
+  border-radius: 50%;
+  animation: blink 1.4s infinite both;
+}
+.dots span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.dots span:nth-child(3) {
+  animation-delay: 0.4s;
+}
 
-    .dots span:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-    .dots span:nth-child(3) {
-      animation-delay: 0.4s;
-    }
+@keyframes blink {
+  0%, 80%, 100% { transform: scale(0); }
+  40% { transform: scale(1); }
+}
 
-    @keyframes blink {
-      0%, 80%, 100% { transform: scale(0); }
-      40% { transform: scale(1); }
-    }
+/* Reworked Form */
+form {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  border-top: 1px solid #ccc;
+  padding: 0.8rem 1rem;
+  background: white;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.05);
+}
 
-    form {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      border-top: 1px solid #ccc;
-      padding: 0.8rem 1rem;
-      background: white;
-      box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.05);
-    }
+input, button {
+  font-size: 1rem;
+  padding: 0.7rem;
+}
 
-    input[type="text"] {
-      flex: 1;
-      padding: 0.7rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding-left: 1rem;
-    }
+input {
+  flex: 1;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  padding-left: 1rem;
+  transition: border 0.2s;
+}
 
-    input:focus {
-      border-color: var(--primary);
-    }
+input:focus {
+  border-color: var(--primary);
+}
 
-    .send {
-      background: var(--primary);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 0.7rem 1.2rem;
-      font-weight: bold;
-      cursor: pointer;
-    }
+button.send {
+  background: var(--primary);
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+  padding: 0.7rem 1.2rem;
+  font-weight: bold;
+  transition: background 0.2s;
+}
 
-    .send:hover {
-      background: #1dd167;
-    }
+button.send:hover {
+  background: #1dd167;
+}
 
-    .overlay {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      width: 100vw;
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.75);
-      z-index: 9999;
-    }
+/* Overlay (Username Prompt) */
+.overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.75);
+  z-index: 9999;
+}
 
-    .overlay-box {
-      background: #ffffff;
-      padding: 2rem;
-      border-radius: 12px;
-      text-align: center;
-      min-width: 300px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-    }
+.overlay-box {
+  background: #ffffff;
+  padding: 2rem;
+  border-radius: 12px;
+  text-align: center;
+  min-width: 300px;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+}
 
-    .overlay-box input, .overlay-box button {
-      width: 100%;
-      padding: 0.7rem;
-      margin-top: 1rem;
-      font-size: 1rem;
-      border-radius: 8px;
-    }
+.overlay-box h2 {
+  margin-bottom: 1rem;
+  font-size: 1.3rem;
+}
 
-    .overlay-box button {
-      background: var(--primary);
-      color: white;
-      border: none;
-      font-weight: bold;
-      cursor: pointer;
-    }
+.overlay-box input {
+  width: 100%;
+  padding: 0.7rem;
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
 
-    img.chat-image {
-      max-width: 250px;
-      border-radius: 0.5rem;
-      margin-top: 0.4rem;
-    }
+.overlay-box button {
+  margin-top: 1rem;
+  padding: 0.7rem 1.2rem;
+  font-size: 1rem;
+  background: var(--primary);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.overlay-box button:hover {
+  background: #1dd167;
+}
+
   </style>
 </head>
 <body>
-  <!-- Username Prompt -->
+
   <div class="overlay" id="overlay">
     <div class="overlay-box">
       <h2>Enter Your Username</h2>
@@ -224,31 +244,25 @@
     </div>
   </div>
 
-  <!-- Header -->
   <header>
     <h1>Chat Room</h1>
   </header>
 
-  <!-- Online Users -->
   <div class="online-users" id="online-users">Online: Loading...</div>
-  <!-- Chat Messages -->
   <div class="chat" id="chat"></div>
-  <!-- Typing Status -->
   <div class="typing" id="typing"></div>
 
-  <!-- Chat Input -->
   <form id="chat-form">
-    <input id="msg" type="text" placeholder="Type your message..." required />
-    <input id="img-upload" type="file" accept="image/*" />
+    <input id="msg" placeholder="Type your message..." required />
     <button type="submit" class="send">Send</button>
   </form>
-
   <audio id="notif-sound" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg" preload="auto"></audio>
 
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-storage-compat.js"></script>
+
+  <!-- Notification Sound -->
 
   <script>
     const firebaseConfig = {
@@ -256,19 +270,17 @@
       authDomain: "chat-room-fd619.firebaseapp.com",
       databaseURL: "https://chat-room-fd619-default-rtdb.firebaseio.com",
       projectId: "chat-room-fd619",
-      storageBucket: "chat-room-fd619.appspot.com",
+      storageBucket: "chat-room-fd619.firebasestorage.app",
       messagingSenderId: "193712381688",
       appId: "1:193712381688:web:b8c185148cd09a80f9250d",
     };
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
-    const storage = firebase.storage();
 
     const chat = document.getElementById('chat');
     const form = document.getElementById('chat-form');
     const input = document.getElementById('msg');
-    const imgUpload = document.getElementById('img-upload');
     const overlay = document.getElementById('overlay');
     const nameInput = document.getElementById('name-input');
     const typingDiv = document.getElementById('typing');
@@ -278,6 +290,7 @@
     let currentUsername = "";
     let typingTimeout;
 
+    // Load username
     if (localStorage.getItem("username")) {
       currentUsername = localStorage.getItem("username");
       overlay.style.display = "none";
@@ -300,24 +313,14 @@
       userRef.onDisconnect().remove();
     }
 
-    form.addEventListener("submit", async (e) => {
+    form.addEventListener('submit', (e) => {
       e.preventDefault();
       const text = input.value.trim();
-      const file = imgUpload.files[0];
-      let imageUrl = null;
-
-      if (file) {
-        const storageRef = storage.ref(`images/${Date.now()}_${file.name}`);
-        await storageRef.put(file);
-        imageUrl = await storageRef.getDownloadURL();
-      }
-
-      if ((text || imageUrl) && currentUsername) {
+      if (text && currentUsername) {
         const timestamp = Date.now();
-        db.ref("messages").push({ username: currentUsername, text, imageUrl, timestamp });
+        db.ref('messages').push({ username: currentUsername, text, timestamp });
         db.ref("typing/" + currentUsername).remove();
-        input.value = "";
-        imgUpload.value = "";
+        input.value = '';
       }
     });
 
@@ -329,46 +332,55 @@
       }, 2000);
     });
 
-    db.ref("messages").on("child_added", (snapshot) => {
-      const { username, text, imageUrl, timestamp } = snapshot.val();
-      const msg = document.createElement("div");
-      msg.className = "message";
-      msg.classList.add(username === currentUsername ? "me" : "them");
+    db.ref('messages').on('child_added', (snapshot) => {
+      const { username, text, timestamp } = snapshot.val();
+      const msg = document.createElement('div');
+      msg.className = 'message';
+      msg.classList.add(username === currentUsername ? 'me' : 'them');
 
-      const meta = document.createElement("div");
-      meta.className = "meta";
+      const meta = document.createElement('div');
+      meta.className = 'meta';
       meta.textContent = `${username} • ${new Date(timestamp).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })}`;
 
-      const body = document.createElement("div");
+      const body = document.createElement('div');
       body.textContent = text;
 
       msg.appendChild(meta);
-      if (text) msg.appendChild(body);
-      if (imageUrl) {
-        const img = document.createElement("img");
-        img.src = imageUrl;
-        img.className = "chat-image";
-        msg.appendChild(img);
-      }
-
+      msg.appendChild(body);
       chat.appendChild(msg);
       chat.scrollTop = chat.scrollHeight;
 
       if (username !== currentUsername) {
-        notifSound.currentTime = 0;
-        notifSound.play().catch((err) => console.warn("Audio play failed:", err));
-      }
+  notifSound.currentTime = 0; // rewind in case it's playing
+  notifSound.play().catch((err) => {
+    console.warn("Audio play failed:", err);
+  });
+}
     });
 
     db.ref("typing").on("value", (snapshot) => {
       const data = snapshot.val();
-      const typingUsers = Object.keys(data || {}).filter(user => user !== currentUsername);
-      typingDiv.innerHTML = typingUsers.length ? `${typingUsers.join(", ")} is typing <div class="dots"><span></span><span></span><span></span></div>` : "";
+      let typingUsers = [];
+
+      for (let user in data) {
+        if (user !== currentUsername) {
+          typingUsers.push(user);
+        }
+      }
+
+      if (typingUsers.length) {
+        typingDiv.innerHTML = `${typingUsers.join(", ")} is typing <div class="dots"><span></span><span></span><span></span></div>`;
+      } else {
+        typingDiv.innerHTML = "";
+      }
     });
 
     db.ref("presence").on("value", (snapshot) => {
-      const names = Object.keys(snapshot.val() || {});
-      onlineUsersDiv.innerHTML = names.map(name => `<div class="user-pill"><span class="user-dot"></span>${name}</div>`).join("");
+      const data = snapshot.val();
+      const names = data ? Object.keys(data) : [];
+      onlineUsersDiv.innerHTML = names.map(name =>
+        `<div class="user-pill"><span class="user-dot"></span>${name}</div>`
+      ).join("");
     });
   </script>
 </body>
