--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <input id="msg" placeholder="Type your message..." required />
     <button type="submit" class="send">Send</button>
   </form>
+  <audio id="notif-sound" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg" preload="auto"></audio>
   <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database-compat.js"></script>
   <script src="script.js"></script>
